2007-03-21  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): Change log levels, the first buffer
	we generate should have the discont flag and we were not
	clearing the need_discont flag.

2007-03-13  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps):
	Introduce pixel aspect ratio handling.

2007-03-12  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_init),
	(dmo_videoenc_chain): Make the encoder detect stream
	discontinuity. It will then insert a keyframe, push a 
	DISCONT buffer and put a gap in the buffer offset.
	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.c:
	(DMO_VideoEncoder_Flush): Introduce a flush method.
	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.h:

2007-02-17  Tim-Philipp Muller <t.i.m@zen.co.uk>

	reviewed by: Ronald S. Bultje <rbultje@gnome.org>

	* ext/pitfdll/dshow_vdec.c: (dshow_videodec_sink_setcaps):
	  Don't use a var after g_free()ing it (#1517002).

2007-01-31  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): Some more fixes.

2007-01-31  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): Port debug messages and errors
	to 0.10.

2007-01-30  Julien MOUTTE  <julien@moutte.net>

	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.c:
	(DMO_VideoEncoder_Open): Fix average time per frame 
	calculation.
	* gst-libs/ext/loader/dmo/Makefile.am: Use gst_util
	functions.

2006-08-21  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: We want I420, nothing else
	for now.

2006-05-15  Wim Taymans  <wim@fluendo.com>

      * ext/pitfdll/dmo_adec.c: (dmo_audiodec_change_state):
      * ext/pitfdll/dmo_aenc.c: (dmo_audioenc_change_state),
      (dmo_audioenc_sink_event):
      * ext/pitfdll/dmo_vdec.c: (dmo_videodec_change_state):
      * ext/pitfdll/dmo_venc.c: (dmo_videoenc_change_state),